# production-ML-system

./: .gitignore  README.md  pyproject.toml
src/ml_system/: __init__.py  cli.py
src/ml_system/batch_inference/: __init__.py  scorer.py
src/ml_system/events/: __init__.py  bronze.py  schema.py
src/ml_system/feature_store/: __init__.py  metadata.py  offline.py  online.py
src/ml_system/features/: __init__.py  definitions.py  engine.py
src/ml_system/model_store/: __init__.py  bundle.py  registry.py
src/ml_system/monitoring/: __init__.py  consistency.py  consistency_job.py  drift.py  metrics.py
src/ml_system/serving/: __init__.py  api.py  resolver.py
src/ml_system/training/: __init__.py  pipeline.py  snapshot.py  split.py
tests/: test_consistency.py  test_events.py  test_features.py  test_resolver_batch_parity.py
