[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-system"
version = "0.1.0"
description = "Time-correct ML system with shared feature logic and training-serving consistency"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "pytest>=7.4",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0"]

[project.scripts]
mlsys = "ml_system.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
